--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,72 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Arial", sans-serif;
+}
+
+body {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+}
+
+form {
+    width: 100%;
+    max-width: 350px;
+}
+
+div.single-input {
+    width: 100%;
+    margin: 30px 0;
+    position: relative;
+}
+
+div.single-input label {
+    font-size: 16px;
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    color: rgb(150, 150, 150);
+    cursor: text;
+    transition: 0.5s ease-in-out;
+}
+
+div.single-input .input {
+    width: 100%;
+    padding: 5px;
+    color: rgb(150, 150, 150);
+    border: 0;
+    border-bottom: 2px solid rgb(200, 200, 200);
+    outline: 0;
+    font-size: 16px;
+}
+
+/* div.single-input .input:focus,
+div.single-input .input:valid  {
+    border-bottom: 2px solid rgb(100, 155, 197);
+} */
+
+/* div.single.input .input:focus ~ label{
+    font-size: 12px;
+    color: rgb(100, 155, 197);
+    transform: translateY(-20px);
+    font-weight: 600;
+} */
+
+/* div.single-input.label-above label {
+    position: static;
+    font-size: 12px;
+    color: rgb(100, 155, 197);
+    margin-bottom: 5px;
+    transform: none;
+    transition: none;
+}
+
+div.single-input.label-above .input {
+    margin-top: 5px;
+} */
+
