new adjust very special

--- a/src/app/components/machine-fleet/machine-fleet.component.html
+++ b/src/app/components/machine-fleet/machine-fleet.component.html
@@ -126,13 +126,12 @@
                     <legend class="float-none w-auto px-3">Errors</legend>
                     <div formArrayName="errors">
                         <div *ngFor="let error of machineFleetForm.get('errors')['controls']; let i = index"
-                            [formGroupName]="i">
-                            {{i + 1}}
-
+                            [formGroupName]="i" class="single-input label-above">
+                            <label for="timestamp-{{ i }}">Error</label>
+                            <input id="message-{{ i }}" formControlName="message" type="text" class="input" />
                         </div>
                     </div>
                 </fieldset>
-
 
                 <!-- Error History -->
                 <fieldset class="border rounded-3 p-3">
@@ -189,6 +188,7 @@
             <table class="table table-light table-hover">
                 <thead class="table-primary">
                     <tr>
+                        <th>GUID</th>
                         <th>Name</th>
                         <th>Status</th>
                         <th>Performance</th>
@@ -197,37 +197,38 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- <tr *ngFor="let machine of array_ofMachines$ | async" > -->
-                    <tr *ngFor="let machine of machineFleet" (click)="onSelectMachine(machine)">
-                    <td>{{ machine.name }}</td>
-                    <td>{{ machine.status }}</td>
-                    <td>{{ machine.performance }}</td>
-                    <td>{{ machine.producedParts }}</td>
-                    <td>
-                        <div>
-                            <div style="float: left; margin-right: 10px;">
-                                <button (click)="onUpdateMachine(machine)"
-                                    class="text-dark btn btn-sm btn-outline-warning">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-binoculars-fill" viewBox="0 0 16 16">
-                                        <path
-                                            d="M4.5 1A1.5 1.5 0 0 0 3 2.5V3h4v-.5A1.5 1.5 0 0 0 5.5 1zM7 4v1h2V4h4v.882a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V13H9v-1.5a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5V13H1V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V4zM1 14v.5A1.5 1.5 0 0 0 2.5 16h3A1.5 1.5 0 0 0 7 14.5V14zm8 0v.5a1.5 1.5 0 0 0 1.5 1.5h3a1.5 1.5 0 0 0 1.5-1.5V14zm4-11H9v-.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5z" />
-                                    </svg>
-                                </button>
+                    <tr *ngFor="let machine of array_ofMachines$ | async">
+                        <!-- <tr *ngFor="let machine of machineFleet" (click)="onSelectMachine(machine)"> -->
+                        <td>{{machine.id}}</td>
+                        <td>{{ machine.name }}</td>
+                        <td>{{ machine.status }}</td>
+                        <td>{{ machine.performance }}</td>
+                        <td>{{ machine.producedParts }}</td>
+                        <td>
+                            <div>
+                                <div style="float: left; margin-right: 10px;">
+                                    <button (click)="onSelectMachine(machine)"
+                                        class="text-dark btn btn-sm btn-outline-warning">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-binoculars-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M4.5 1A1.5 1.5 0 0 0 3 2.5V3h4v-.5A1.5 1.5 0 0 0 5.5 1zM7 4v1h2V4h4v.882a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V13H9v-1.5a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5V13H1V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V4zM1 14v.5A1.5 1.5 0 0 0 2.5 16h3A1.5 1.5 0 0 0 7 14.5V14zm8 0v.5a1.5 1.5 0 0 0 1.5 1.5h3a1.5 1.5 0 0 0 1.5-1.5V14zm4-11H9v-.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5z" />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div style="float: inline-start;">
+                                    <button (click)="onDeleteMachine(machine)" class="btn btn-sm btn-outline-danger">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-database-fill-dash" viewBox="0 0 16 16">
+                                            <path
+                                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M11 12h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1M8 1c-1.573 0-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4s.875 1.755 1.904 2.223C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777C13.125 5.755 14 5.007 14 4s-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1" />
+                                            <path
+                                                d="M2 7v-.839c.457.432 1.004.751 1.49.972C4.722 7.693 6.318 8 8 8s3.278-.307 4.51-.867c.486-.22 1.033-.54 1.49-.972V7c0 .424-.155.802-.411 1.133a4.51 4.51 0 0 0-4.815 1.843A12 12 0 0 1 8 10c-1.573 0-3.022-.289-4.096-.777C2.875 8.755 2 8.007 2 7m6.257 3.998L8 11c-1.682 0-3.278-.307-4.51-.867-.486-.22-1.033-.54-1.49-.972V10c0 1.007.875 1.755 1.904 2.223C4.978 12.711 6.427 13 8 13h.027a4.55 4.55 0 0 1 .23-2.002m-.002 3L8 14c-1.682 0-3.278-.307-4.51-.867-.486-.22-1.033-.54-1.49-.972V13c0 1.007.875 1.755 1.904 2.223C4.978 15.711 6.427 16 8 16c.536 0 1.058-.034 1.555-.097a4.5 4.5 0 0 1-1.3-1.905" />
+                                        </svg>
+                                    </button>
+                                </div>
                             </div>
-                            <div style="float: inline-start;">
-                                <button (click)="onDeleteMachine(machine)" class="btn btn-sm btn-outline-danger">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-database-fill-dash" viewBox="0 0 16 16">
-                                        <path
-                                            d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M11 12h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1M8 1c-1.573 0-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4s.875 1.755 1.904 2.223C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777C13.125 5.755 14 5.007 14 4s-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1" />
-                                        <path
-                                            d="M2 7v-.839c.457.432 1.004.751 1.49.972C4.722 7.693 6.318 8 8 8s3.278-.307 4.51-.867c.486-.22 1.033-.54 1.49-.972V7c0 .424-.155.802-.411 1.133a4.51 4.51 0 0 0-4.815 1.843A12 12 0 0 1 8 10c-1.573 0-3.022-.289-4.096-.777C2.875 8.755 2 8.007 2 7m6.257 3.998L8 11c-1.682 0-3.278-.307-4.51-.867-.486-.22-1.033-.54-1.49-.972V10c0 1.007.875 1.755 1.904 2.223C4.978 12.711 6.427 13 8 13h.027a4.55 4.55 0 0 1 .23-2.002m-.002 3L8 14c-1.682 0-3.278-.307-4.51-.867-.486-.22-1.033-.54-1.49-.972V13c0 1.007.875 1.755 1.904 2.223C4.978 15.711 6.427 16 8 16c.536 0 1.058-.034 1.555-.097a4.5 4.5 0 0 1-1.3-1.905" />
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
-                    </td>
+                        </td>
                     </tr>
                 </tbody>
             </table>
