new adjust here

--- a/src/app/components/machine-fleet/machine-fleet.component.html
+++ b/src/app/components/machine-fleet/machine-fleet.component.html
@@ -4,6 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-3" *ngIf="oSelectedMachine">
+            <!-- <div [ngClass]="{'col-sm-9':oSelectedMachine, 'col-sm-12':!oSelectedMachine}"> -->
             <form [formGroup]="machineFleetForm" (ngSubmit)="onSubmit()">
 
 
@@ -122,16 +123,10 @@
                 </fieldset>
 
                 <!-- Errors -->
-                <fieldset class="border rounded-3 p-3">
-                    <legend class="float-none w-auto px-3">Errors</legend>
-                    <div formArrayName="errors">
-                        <div *ngFor="let error of machineFleetForm.get('errors')['controls']; let i = index"
-                            [formGroupName]="i" class="single-input label-above">
-                            <label for="timestamp-{{ i }}">Error</label>
-                            <input id="message-{{ i }}" formControlName="message" type="text" class="input" />
-                        </div>
-                    </div>
-                </fieldset>
+                <div class="single-input label-above">
+                    <label for="errors">Errors</label>
+                    <input id="errors" formControlName="errors" type="text" class="input" />
+                </div>
 
                 <!-- Error History -->
                 <fieldset class="border rounded-3 p-3">
@@ -159,9 +154,9 @@
                     <div formArrayName="maintenanceHistory">
                         <div *ngFor="let history of machineFleetForm.get('maintenanceHistory')['controls']; let i = index"
                             [formGroupName]="i" class="single-input label-above">
-                            <label for="date-{{ i }}">Date:</label>
+                            <label for="date-{{ i }}">Date</label>
                             <input id="date-{{ i }}" formControlName="date" type="date" class="input" />
-                            <label for="details-{{ i }}">Details:</label>
+                            <label for="details-{{ i }}">Details</label>
                             <input id="details-{{ i }}" formControlName="details" type="text" class="input" />
                         </div>
                     </div>
@@ -199,7 +194,7 @@
                 <tbody>
                     <tr *ngFor="let machine of array_ofMachines$ | async">
                         <!-- <tr *ngFor="let machine of machineFleet" (click)="onSelectMachine(machine)"> -->
-                        <td>{{machine.id}}</td>
+                        <td>{{ machine.id }}</td>
                         <td>{{ machine.name }}</td>
                         <td>{{ machine.status }}</td>
                         <td>{{ machine.performance }}</td>
@@ -209,11 +204,13 @@
                                 <div style="float: left; margin-right: 10px;">
                                     <button (click)="onSelectMachine(machine)"
                                         class="text-dark btn btn-sm btn-outline-warning">
+
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             fill="currentColor" class="bi bi-binoculars-fill" viewBox="0 0 16 16">
                                             <path
                                                 d="M4.5 1A1.5 1.5 0 0 0 3 2.5V3h4v-.5A1.5 1.5 0 0 0 5.5 1zM7 4v1h2V4h4v.882a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V13H9v-1.5a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5V13H1V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V4zM1 14v.5A1.5 1.5 0 0 0 2.5 16h3A1.5 1.5 0 0 0 7 14.5V14zm8 0v.5a1.5 1.5 0 0 0 1.5 1.5h3a1.5 1.5 0 0 0 1.5-1.5V14zm4-11H9v-.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5z" />
                                         </svg>
+
                                     </button>
                                 </div>
                                 <div style="float: inline-start;">
