--- a/src/app/components/machine-fleet/machine-fleet.component.css
+++ b/src/app/components/machine-fleet/machine-fleet.component.css
@@ -22,3 +22,9 @@ legend {
     font-weight: 600;
     color: rgb(100, 155, 197);
 }
+
+.custom-tooltip {
+    --bs-tooltip-bg: var(--bd-violet-bg);
+    --bs-tooltip-color: var(--bs-white);
+  }
+  
