--- a/src/app/components/machine-fleet/machine-fleet.component.html
+++ b/src/app/components/machine-fleet/machine-fleet.component.html
@@ -185,9 +185,9 @@
                     <tr>
                         <th>GUID</th>
                         <th>Name</th>
-                        <th>Status</th>
+                        <!-- <th>Status</th>
                         <th>Performance</th>
-                        <th>Produced Parts</th>
+                        <th>Produced Parts</th> -->
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -196,9 +196,9 @@
                         <!-- <tr *ngFor="let machine of machineFleet" (click)="onSelectMachine(machine)"> -->
                         <td>{{ machine.id }}</td>
                         <td>{{ machine.name }}</td>
-                        <td>{{ machine.status }}</td>
+                        <!-- <td>{{ machine.status }}</td>
                         <td>{{ machine.performance }}</td>
-                        <td>{{ machine.producedParts }}</td>
+                        <td>{{ machine.producedParts }}</td> -->
                         <td>
                             <div>
                                 <div style="float: left; margin-right: 10px;">
