--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
     display: flex;
     /* align-items: center; */
@@ -16,7 +16,7 @@ body {
 
 form {
     width: 100%;
-    max-width: 350px;
+    max-width: 100%;
 }
 
 div.single-input {
